# musical-system

./: .editorconfig  .env.development  .gitignore  README.md  docker-compose.yml
backend/: .flake8  Dockerfile  alembic.ini  calendar.sqlite  calendar.sqlite-journal  main.py  pyproject.toml  setup.py
backend/alemnbic/: env.py
backend/alemnbic/versions/: 61c683ce9ed6_first_migration.py  b427d112b008_add_label_column.py  d59ec05e6312_revert_base_model.py  e7626eb311c3_update_base_model.py
backend/backend/: app.py
backend/backend/core/: config.py  urls.py
backend/backend/database/: base.py  base_class.py  db.py  session.py
backend/calendar/: helper.py  model.py  schema.py  urls.py
backend/tests/: test_calendar.py
frontend/: .eslintrc.js  Procfile  index.js  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/scss/: style.scss
frontend/src/assets/scss/helpers/: _constant.scss  _functions.scss  _helpers-dir.scss  _mixins.scss
frontend/src/assets/scss/modules/: _calendar.scss  _event-item.scss  _form.scss  _header.scss  _modules-dir.scss  _sidebar.scss
frontend/src/components/calendar/: Calendar.vue  EventItem.vue  Header.vue
frontend/src/components/form/: Form.vue
frontend/src/components/layout/: Header.vue  Sidebar.vue
frontend/src/config/: index.js
frontend/src/hooks/: useApi.js  useDate.js
frontend/src/services/: index.js
frontend/src/store/: index.js
frontend/src/store/modules/events/: actions.js  getters.js  index.js  mutations.js
frontend/src/views/: Calendar.vue
scripts/: heroku.sh
