[tool.poetry]
name = "calendar"
version = "1.0.0"
description = ""
authors = ["Oliver Arthur <contact@oliverarthurnardi.com>"]
packages = [
    { include = "backend" },
    { include = "calendar" },
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
starlette = "^0.13.6"
pydantic = { version = "^1.4", extras = ["email"] }
uvicorn = "^0.12.1"
gunicorn = "^20.0.4"
alembic = "^1.4.3"
sqlalchemy_mixins = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"
pylint = "^2.6.0"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"

[tool.poetry.scripts]
fastapi-admin = "backend.app:app"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
